--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,8 @@
 <body>
 
 <h1>About Me</h1>
-<p>My name is Grace Johnson. I was born on December 25th in 1999. I have two brothers, one older and one younger, and a mother and father. Ever since I was little, I've always enjoyed dancing. I started taking dance lessons when I was three years old, and stopped dancing less than a year ago. I started doing yoga, which I enjoy very much. I have many interests, almost everything is interesting to me. I don't dislike anything, but one thing I don't like is eating animals. A fun fact about me is I'm a vegan. I was raised vegetarian, so I've never tasted meat, and recently went vegan last Feburary. </p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ZKI04_4uQTE" frameborder="0" allowfullscreen></iframe>
+  
+<p style="font-family:verdana;"> My name is Grace Johnson. I was born on December 25th in 1999. I have two brothers, one older and one younger, and a mother and father. Ever since I was little, I've always enjoyed dancing. I started taking dance lessons when I was three years old, and stopped dancing less than a year ago. I started doing yoga, which I enjoy very much. I have many interests, almost everything is interesting to me. I don't dislike anything, but one thing I don't like is eating animals. A fun fact about me is I'm a vegan. I was raised vegetarian, so I've never tasted meat, and recently went vegan last Feburary. </p>
+
 </body>
 </html>
