--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 
-<h1>About Me</h1>
+<h1 style="font-family:courier;">About Me</h1>
   
-<p style="font-family:verdana;"> My name is Grace Johnson. I was born on December 25th in 1999. I have two brothers, one older and one younger, and a mother and father. Ever since I was little, I've always enjoyed dancing. I started taking dance lessons when I was three years old, and stopped dancing less than a year ago. I started doing yoga, which I enjoy very much. I have many interests, almost everything is interesting to me. I don't dislike anything, but one thing I don't like is eating animals. A fun fact about me is I'm a vegan. I was raised vegetarian, so I've never tasted meat, and recently went vegan last Feburary. </p>
+<p style="font-family:verdana;">My name is Grace Johnson. I was born on December 25th in 1999. I have two brothers, one older and one younger, and a mother and father. Ever since I was little, I've always enjoyed dancing. I started taking dance lessons when I was three years old, and stopped dancing less than a year ago. I started doing yoga, which I enjoy very much. I have many interests, almost everything is interesting to me. I don't dislike anything, but one thing I don't like is eating animals. A fun fact about me is I'm a vegan. I was raised vegetarian, so I've never tasted meat, and recently went vegan last Feburary. </p>
 
 </body>
 </html>
