--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
   
 <p style="font-family:verdana;">My name is Grace Johnson. I was born on December 25th in 1999. I have two brothers, one older and one younger, and a mother and father. Ever since I was little, I've always enjoyed dancing. I started taking dance lessons when I was three years old, and stopped dancing less than a year ago. I started doing yoga, which I enjoy very much. I have many interests, almost everything is interesting to me. I don't dislike anything, but one thing I don't like is eating animals. A fun fact about me is I'm a vegan. I was raised vegetarian, so I've never tasted meat, and recently went vegan last Feburary. </p>
 
-<p style="font-family:verdana;">Here are a few of my very favorite websites! <a href="https://soundcloud.com/stream">Soundcloud</a>, <a href="https://www.youtube.com/">YouTube</a>, <a href="https://www.peta.org/">PETA</a>, and <a href="https://www.accuweather.com">Weather</a>.</p>
+<p style="font-family:verdana;">Here are a few of my very favorite websites! <a href="https://soundcloud.com/stream">Soundcloud</a>, <a href="http://vsco.co/grace1225/images/1">VSCO</a>, <a href="https://ggrace1225.tumblr.com/">Tumblr</a>, and <a href="https://www.peta.org/">PETA</a>.</p>
  
 <img src="https://scontent.xx.fbcdn.net/v/t1.0-9/14915232_215351335558882_7743791519290384739_n.jpg?oh=27034a07773aad7eb235c084dc60ab49&oe=5A037EA5" width=400 height=450>
 
